# yesod-admin-crud

./: .gitignore  LICENSE  README.markdown  example-sqlite.yml  example.hs  yesod-admin-crud.cabal
Yesod/Admin/: Crud.hs  User.hs
Yesod/Admin/Crud/: Class.hs  Handlers.hs  TH.hs  TableFuncs.hs  Type.hs
cassius/: yesod-admin-crud.css
config/: settings.yml
hamlet/: delete-row.hamlet  edit-row.hamlet  listing.hamlet  table-header.hamlet  table-row-vals.hamlet
