Name:                yesod-admin-crud
Version:             0.1
Synopsis:            Admin CRUD interface for Yesod
License:             BSD3
License-file:        LICENSE
Author:              Yair Chuchem
Maintainer:          yairchu@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2
Extra-source-files: cassius/yesod-admin-crud.css,
                    hamlet/delete-row.hamlet,
                    hamlet/edit-row.hamlet,
                    hamlet/listing.hamlet,
                    hamlet/table-header.hamlet,
                    hamlet/table-row-vals.hamlet
Library
  Exposed-modules: Yesod.Admin.Crud
  Other-modules: Yesod.Admin.Crud.Handlers
                 Yesod.Admin.Crud.TH
                 Yesod.Admin.Crud.TableFuncs
                 Yesod.Admin.Crud.Type
  Build-depends: base, template-haskell, text, yesod >= 0.9, hamlet >= 0.10, shakespeare-css >= 0.10, persistent >= 0.6
  ghc-options: -Wall
